# HAGMI

./: .dockerignore  Dockerfile  README.md  app.py  browser.py  config.py  config.yaml.example  docker-compose.yaml  pyproject.toml  utils.py
.github/workflows/: build-docker-image.yml
models/: _adapter.py  aistudio.py  genai.py
scripts/: create_state.py
